# pg_ch_incremental_loader

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  todo.md
app/: config.py  loader.py  logger.py
resources/: hiring task sample data.sql  hiring task.docx  onboarding.md
scripts/: init_clickhouse.sh  init_spark.sh  init_uv.sh  populator.sh
spark/conf/: log4j2-json-layout.properties
sql/: ddl-ch.sql  ddl-pg.sql
tests/: test-ch.py  test-env.py  test-pg.py  test-spark.py  test.env
utils/: cron_job_def.sh  generate_csv_synth_data.py
