[project]
name = "pg_ch_incremental_loader"
version = "0.1.0"
description = "koinz DE task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.3",
    "clickhouse-connect>=0.10.0",
    "clickhouse-driver>=0.2.10",
    "clickpy>=0.12.1",
    "dotenv>=0.9.9",
    "ipython>=9.7.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyspark>=4.0.1",
]
